# norda-aml-sentinel

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
app/: audit.py  db.py  governance.py  guardrails.py  main.py  models.py  seed.py
app/agents/: base.py  investigator.py  triage.py
static/: index.html
static/src/: app.jsx  icons.jsx  mocks.jsx  page-audit.jsx  page-case.jsx  page-cases.jsx  page-security.jsx  shell.jsx  ui.jsx
tests/: conftest.py  test_agents.py  test_audit.py  test_governance.py  test_guardrails.py
