[project]
name = "norda-aml"
version = "0.1.0"
description = "NORDA AML Sentinel — AI-powered transaction monitoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

